fix pre tags wrapping and chat width

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -6,3 +6,7 @@
 		light --default,
 		dark;
 }
+
+pre {
+	white-space: pre-wrap;
+}
